# hackermanim

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: code_transformer.py
src/hackermanim/: __init__.py  hackermanim.py  monotext.py  octicon.py  ripple.py
