[project]
name = "hackermanim"
version = "0.1.0"
authors = [
  { name="Himadri Bhattacharjee", email="107522312+lavafroth@users.noreply.github.com" },
]
description = "Manim but for hackers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lavafroth/hackermanim"
Issues = "https://github.com/lavafroth/hackermanim/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
